--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
